test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: test.choosepath.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: test-backend-service
            port:
              number: 9004
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-frontend-service
            port:
              number: 3000

  tls:
  - hosts:
    - test.choosepath.org
    secretName: test-choosepath-org-tls
